--- a/express/package.json
+++ b/express/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon ./ws.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,10 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "express": "^4.18.2",
+    "http-server": "^14.1.1",
+    "nodemon": "^3.1.7",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
     "source-map": "^0.7.4",
     "ws": "^8.16.0"
   }
