--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@types/three": "^0.163.0",
     "@types/ws": "^8.5.10",
+    "axios": "^1.7.7",
+    "babel-polyfill": "^6.26.0",
     "element-plus": "^2.6.3",
+    "gsap": "^3.12.5",
     "ol": "^9.2.4",
     "pinia": "^2.1.7",
     "sass": "^1.74.1",
